--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Hello world !</h1>
+    <div class="container">
+        <img src="https://newuu.uz/_nuxt/img/logo.e30bbe6.png" alt="">
+    </div>
 </body>
 </html>
